# keeperfx-launcher-qt

./: CMakeLists.txt  Dockerfile.base  Dockerfile.linux64  Dockerfile.win64s  README.md  build.sh  compile-win64s.sh  resources.qrc
docs/: translations.md
i18n/: translations.pot  translations_cs.po  translations_de.po  translations_es.po  translations_fr.po  translations_it.po  translations_ja.po  translations_ko.po  translations_nl.po  translations_pl.po  translations_pt.po  translations_ru.po  translations_uk.po  translations_zh-hans.po
res/: contributors.txt  launcher-translators.txt
src/: cdn.cpp  cdn.h  helper.h  installkfxdialog.cpp  kfxversion.cpp  kfxversion.h  launchermainwindow.cpp  launchermainwindow.h  launcheroptions.cpp  settings.cpp  settingsdialog.cpp  translator.cpp  updatedialog.cpp  version.h
ui/: launchermainwindow.ui  settingsdialog.ui
